# GoProAutoImmichUpload

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ci/: build_and_push.sh
gopro_immich_uploader/: __init__.py  __main__.py  config.py  exit_handler.py  logger.py  loop.py  main.py  progress_reporting_iterator.py  service.py  setup.py  upload.py
gopro_immich_uploader/config/: __init__.py  app.py  common.py  service.py  setup.py
gopro_immich_uploader/gopro/: __init__.py  ble_controller.py  ble_controller_no_pair.py  camera.py  download.py  manufacturer_data_structs.py  straming_download_mixin.py  streamin_download.py  streaming_download.py  streaming_download_mixin.py  wifi_controller_stub.py
gopro_immich_uploader/immich/: __init__.py  streaming_iterator_fixed.py  upload.py
gopro_immich_uploader/tinydb/: __init__.py  storage.py
