[project]
name = "gopro-immich-uploader"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = [
    "requests_toolbelt.*",
    "open_gopro.*",
]
ignore_missing_imports = true
